--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DIRECT_URL="postgres://postgres.[PROJECT-ID]:[PASSWORD]@aws-0-[REGION].pooler.su
 
 # Next.js
 NEXT_PUBLIC_SITE_URL="http://localhost:3000"
+
+# Admin
+ADMIN_PASSWORD="your-secure-admin-password"
