--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-# Supabase Database
-DATABASE_URL="postgres://postgres.[PROJECT-ID]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:6543/postgres?pgbouncer=true"
-DIRECT_URL="postgres://postgres.[PROJECT-ID]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:5432/postgres"
+# Neon Database
+DATABASE_URL="postgresql://USER:PASSWORD@HOST/DBNAME?sslmode=require"
+DIRECT_URL="postgresql://USER:PASSWORD@HOST/DBNAME?sslmode=require"
 
 # Next.js
 NEXT_PUBLIC_SITE_URL="http://localhost:3000"
