--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^6.19.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.562.0",
     "next": "15.5.9",
     "react": "19.1.0",
