--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.19.1",
+    "@vercel/blob": "^2.0.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.562.0",
     "next": "15.5.9",
+    "next-auth": "^5.0.0-beta.30",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
