--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "lucide-react": "^0.562.0",
     "next": "15.5.9",
     "next-auth": "^5.0.0-beta.30",
+    "openai": "^6.17.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
